inline flex to fix question button vertical alignment

--- a/sfa_dash/static/css/styles.css
+++ b/sfa_dash/static/css/styles.css
@@ -233,5 +233,5 @@ a.help-button{
 }
 .input-wrapper{
     width: calc(100% - 29px);
-    display: inline-block;
+    display: inline-flex;
 }
